--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <form action="simpan.html" method="post" onsubmit="return sahkan ();">
         Keperluan
-        <input type="text" name="keperluan" onfocus="target()" onblur="blind()">
+        <input type="text" name="keperluan" onfocus="tar()" onblur="blind()">
         <button type="submit">Simpan</button>
         <br>
         <div id="mesej">Sila nyatakan keperluan anda</div>
     </form>
-    
+
 </body>
 
 </html>
